my-apps/media/libreddit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libreddit
  namespace: libreddit
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: libreddit
